--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,97 @@
-transformers
-torch
-datasets
-spacy
-nltk
-yfinance
-tqdm
-scikit-learn
-pandas
-numpy
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.7
+aiosignal==1.3.2
+annotated-types==0.7.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpathlib==0.21.1
+colorama==0.4.6
+confection==0.1.5
+contourpy==1.3.2
+curl_cffi==0.11.1
+cycler==0.12.1
+cymem==2.0.11
+datasets==3.6.0
+dill==0.3.8
+filelock==3.18.0
+fonttools==4.58.1
+frozendict==2.4.6
+frozenlist==1.6.0
+fsspec==2025.3.0
+huggingface-hub==0.32.4
+idna==3.10
+Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.4.4
+multiprocess==0.70.16
+multitasking==0.0.11
+murmurhash==1.0.13
+networkx==3.5
+nltk==3.9.1
+numpy==2.2.6
+packaging==25.0
+pandas==2.2.3
+peewee==3.18.1
+pillow==11.2.1
+platformdirs==4.3.8
+preshed==3.0.10
+propcache==0.3.1
+protobuf==6.31.1
+pyarrow==20.0.0
+pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+sympy==1.14.0
+thinc==8.3.6
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.0
+tqdm==4.67.1
+transformers==4.52.4
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.4.0
+wasabi==1.1.3
+weasel==0.4.1
+websockets==15.0.1
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.20.0
+yfinance==0.2.61
