--- a/requirements.txt
+++ b/requirements.txt
@@ -101,9 +101,9 @@ sympy==1.14.0
 thinc==8.3.6
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.0.1+cu118
-torchvision==0.15.2+cu118
-torchaudio==2.0.2
+torch==2.1.0+cu118
+torchvision==0.16.0+cu118
+torchaudio==2.1.0+cu118
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
